<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label">Status Bar</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="battery_low_title">Please connect charger</string>
    <string name="battery_low_subtitle">The battery is getting low:</string>
    <string name="battery_low_percent_format">%d%% or less remaining.</string>
    <string name="battery_low_why">Battery use</string>
    <string name="usb_accessory_permission_prompt">Allow the application %1$s to access the USB accessory?</string>
    <string name="usb_device_confirm_prompt">Open %1$s when this USB device is connected?</string>
    <string name="usb_accessory_confirm_prompt">Open %1$s when this USB accessory is connected?</string>
    <string name="usb_accessory_uri_prompt">No installed applications work with this USB accessory. Learn more about this accessory at %1$s</string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_accessory">Use by default for this USB accessory</string>
    <string name="tab_notifications_lable">Notifications</string>
    <string name="tab_toggles_lable">Toggles</string>
    <string name="status_bar_time_format_12">h:mma</string>
    <string name="status_bar_time_format_24">HH:mm</string>
    <string name="status_bar_date_format">MMMM d, yyyy</string>
    <string name="usb_mode_notification">USB Storage</string>
    <string name="usb_mode_dont_ask">"Don't ask next time"</string>
    <string name="usb_mode_mount_storage_title">Open USB storage now？</string>
    <string name="mount_storage">Yes</string>
    <string name="dismount_storage">No</string>
    <string name="move_data_to_sdcard_title">Export internal data to SD card</string>
    <string name="move_data_to_sdcard_message">"It will move data such as screenshots, pictures and so on from internal storage to SD card. To make sure smooth and stable use experience, it's better to keep SD card in phone for daily use."</string>
    <string name="user_guide_for_notification">A new notification received，you can drag down the status bar to check detail</string>
    <string name="user_guide_for_toggle">The toggle list can be scrolled horizontally</string>
    <string name="user_guide_for_toggle_list">Click this to customize the toggle list</string>
    <string name="user_guide_for_call">To back to the phone UI, you can drag down the status bar and click the calling notification</string>
    <string name="return_to_incall_screen">Click to return to call</string>
    <string name="call_status_dialing">Dialing</string>
    <string name="status_bar_toggle_divider">Customize</string>
    <string name="status_bar_toggle_wifi">WLAN</string>
    <string name="status_bar_toggle_data">Data</string>
    <string name="status_bar_toggle_bluetooth">BT</string>
    <string name="status_bar_toggle_rotate">Rotation</string>
    <string name="status_bar_toggle_brightness">Backlight</string>
    <string name="status_bar_toggle_mute">Silent</string>
    <string name="status_bar_toggle_gps">GPS</string>
    <string name="status_bar_toggle_sync">Sync</string>
    <string name="status_bar_toggle_vibrate">Vibrate</string>
    <string name="status_bar_toggle_flight_mode">Airplane</string>
    <string name="status_bar_toggle_lock">Lock</string>
    <string name="status_bar_toggle_ac">Access control</string>
    <string name="status_bar_toggle_network_type">Network type</string>
    <string name="status_bar_toggle_torch">Torch</string>
    <string name="status_bar_toggle_reboot">Reboot</string>
    <string name="status_bar_toggle_shutdown">Power</string>
    <string name="status_bar_toggle_privacy_mode">Guard</string>
    <string name="status_bar_toggle_style">Toggle style</string>
    <string name="status_bar_toggle_style_compact">Compact</string>
    <string name="status_bar_toggle_style_single_page">Page</string>
    <string name="status_bar_toggle_settings">Toggle</string>
    <string name="status_bar_toggle_arrangement">Customize toggles</string>
    <string name="status_bar_toggle_divider_page">%1$d toggles placed above bar are active</string>
    <string name="status_bar_toggle_divider_list">Toggles placed above bar are active</string>
    <string name="menu_reset_toggle_settings">Reset toggles</string>
    <string name="status_bar_toggle_waiting">Changing toggle style...</string>
    <string name="battery_indicator_style">Battery indicator style</string>
    <string name="default_usb_mode">Default USB connection type</string>
    <string name="enable_back_long_press">Long-press Back to kill App</string>
    <string name="expandable_under_fullscreen">expandable under fullscreen</string>
    <string name="expandable_under_fullscreen_summary">by sliding down from the top of screen</string>
    <string name="settings_separator">,</string>
    <string name="incoming_call_vibrate_hint">Incoming call</string>
    <string name="notification_vibrate_hint">Notification</string>
    <string name="mms_vibrate_hint">Message</string>
    <string name="not_all_vibrate_hint">According to your settings, %1$s V ibrates, %2$s does not vibrate, you can change it through Settings > Sound > Vibrate</string>
    <string name="no_vibrate_hint">Accoring to your settings, incoming call notifcation and sms will not vibrate, enabling vibration has no effect</string>
    <string name="to_vibrate_settings">Vibration Settings</string>
</resources>
